--- a/HW1.html
+++ b/HW1.html
@@ -11,7 +11,7 @@
 <body>
     <div class="back">
         <div class="box">
-            <form action="">
+            <form action="" method="get">
                 <h1 class="hhead">
                     Application For Permission To Date My Daughter
                 </h1>
